<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="add_city">Add city</string>
    <string name="added_city">(Added)</string>
    <string name="app_name">Weather</string>
    <string name="aqi_good">Excellent</string>
    <string name="aqi_hazardous">Severe pollution</string>
    <string name="aqi_moderate">Good</string>
    <string name="aqi_unhealthy_hight">Heavy pollution</string>
    <string name="aqi_unhealthy_low">Mild pollution</string>
    <string name="aqi_unhealthy_middle">Moderate pollution</string>
    <string name="celsius">Celsius</string>
    <string name="celsius_selected">Selected Celsius degree</string>
    <string name="city_count_over_limit">Limit of added cities is exceeded. You need to delete an existing city to add a new one.</string>
    <string name="city_order_save_failed">Failed to save city order. Please try again.</string>
    <string name="city_delete_failed">Failed to delete city. Please try again.</string>
    <string name="city_list">City List</string>
    <string name="current_location">Current location %1$s</string>
    <string name="delete_city">Delete city</string>
    <string name="display_as_list">Show in list</string>
    <string name="easter_egg_longtan">成都龙潭工业园</string>
    <string name="easter_egg_mengzhuiwan">猛追湾横街99号</string>
    <string name="easter_egg_shimao">成都世茂大厦</string>
    <string name="easter_egg_shumagang">中国数码港大厦</string>
    <string name="easter_egg_wangjingbei">望京北路1号</string>
    <string name="ester_egg">望京东路1号</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="fahrenheit_selected">Selected Fahrenheit degree</string>
    <string name="format_cityname">%1$s %2$s %3$s</string>
    <string name="format_weather">%1$s %2$s%3$s to %4$s%5$s</string>
    <string name="green_land">北京绿地中心</string>
    <string name="hint_edittext_add_city">Enter city and region</string>
    <string name="hot_city_json">{ hotCities: [ { cityId: 101010100, city: 北京, county: 北京, province: 北京, country: 中国 }, { cityId: 101030100, city: 天津, county: 天津, province: 天津, country: 中国 }, { cityId: 101020100, city: 上海, county: 上海, province: 上海, country: 中国 }, { cityId: 101280101, city: 广州, county: 广州, province: 广东, country: 中国 }, { cityId: 101040100, city: 重庆, county: 重庆, province: 重庆, country: 中国 }, { cityId: 101190101, city: 南京, county: 南京, province: 江苏, country: 中国 }, { cityId: 101210101, city: 杭州, county: 杭州, province: 浙江, country: 中国 }, { cityId: 101230101, city: 福州, county: 福州, province: 福建, country: 中国 }, { cityId: 101250101, city: 长沙, county: 长沙, province: 湖南, country: 中国 }, { cityId: 101200101, city: 武汉, county: 武汉, province: 湖北, country: 中国 }, { cityId: 101310101, city: 海口, county: 海口, province: 海南, country: 中国 }, { cityId: 101270101, city: 成都, county: 成都, province: 四川, country: 中国 }, { cityId: 101110101, city: 西安, county: 西安, province: 陕西, country: 中国 }, { cityId: 101230201, city: 厦门, county: 厦门, province: 福建, country: 中国 }, { cityId: 101190401, city: 苏州, county: 苏州, province: 江苏, country: 中国 } ] }</string>
    <string name="icp_num"> 京ICP备18020659号-20A </string>
    <string name="real_feel_temp">Sensible temperature</string>
    <string name="refresh">Refresh</string>
    <string name="relative_Humidity">Relative humidity</string>
    <string name="separator"> , </string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="unknow">?</string>
    <string name="update_failed_gps_unavailable">Please check if GPS location service is on</string>
    <string name="update_failed_network_unavailable1">Failed to get weather data</string>
    <string name="update_failed_network_unavailable2">Please check your network connection and click Fresh to retry.</string>
    <string name="weather_add_city_alread">City has been added</string>
    <string name="weather_alert">%1$s%2$s预警：%3$s</string>
    <string name="weather_alert_cold">Cold</string>
    <string name="weather_alert_cool_down">Cool down</string>
    <string name="weather_alert_display_time_day">Updated %1$d  days ago</string>
    <string name="weather_alert_display_time_hour">Updated %1$d  hours ago</string>
    <string name="weather_alert_display_time_minute">Updated %1$d  minutes ago</string>
    <string name="weather_alert_dry_hot_air">Dry hot wind</string>
    <string name="weather_alert_frost_fire">Forest fire</string>
    <string name="weather_alert_frozen">Freeze</string>
    <string name="weather_alert_low_temp">Low temperature</string>
    <string name="weather_alert_road_ice_and_snow">Road snow and ice</string>
    <string name="weather_alert_thunderstorm">Thunderstorm winds</string>
    <string name="weather_alert_time_now">Updated just now</string>
    <string name="weather_alert_tip">%1$s%2$s预警</string>
    <string name="weather_alert_title">Weather Warning</string>
    <string name="weather_c_icon_description">%1$d degrees Celsius</string>
    <string name="weather_celsius_symbol">°C</string>
    <string name="weather_china">中国</string>
    <string name="weather_city_list_delete_last_city_tips">keep at least one city</string>
    <string name="weather_click_refresh_no_network">Please check network connection and then click Refresh to try again</string>
    <string name="weather_current_day_text">Today</string>
    <string name="weather_f_icon_description">%1$d degrees Fahrenheit</string>
    <string name="weather_fahrenheit_symbol">°F</string>
    <string name="weather_forecast_co_text">CO</string>
    <string name="weather_forecast_date">%1$s.%2$s</string>
    <string name="weather_forecast_no2_text">NO₂</string>
    <string name="weather_forecast_o3_text">O₃</string>
    <string name="weather_forecast_pm10_text">PM10</string>
    <string name="weather_forecast_pm2_5_text">PM2.5</string>
    <string name="weather_forecast_so2_text">SO₂</string>
    <string name="weather_forecast_templet_icon">%1$s=%2$s=%3$s=%4$s=%5$s=%6$s</string>
    <string name="weather_forecast_templet_icon_second">%1$s=%2$s=%3$d=%4$s=%5$s=%6$d</string>
    <string name="weather_forecast_templet_normal">%1$s=%2$s=%3$s=%4$s</string>
    <string name="weather_forecast_ultraviolet_radiation">UV radiation</string>
    <string name="weather_forecast_wind_level"> Level</string>
    <string name="weather_hot_city">Popular Cities</string>
    <string name="weather_location_default_name">Location Service</string>
    <string name="weather_null">--</string>
    <string name="weather_pager_aqi_text">Air Quality </string>
    <string name="weather_pager_bottom_related_text">Related weather data from</string>
    <string name="weather_pager_jump_text">Load More</string>
    <string name="weather_pager_update_text">Updated on %1$s</string>
    <string name="weather_pager_week_and_date_text">%1$s %2$s</string>
    <string name="weather_parnter_description">Weather data from Beijing Weather, Caiyun Weather, and CNEMC via Xiaomi Weather</string>
    <string name="weather_parnter_text">Beijing Weather, Caiyun, CNEMC</string>
    <string name="weather_percent_symbol">%</string>
    <string name="weather_privacy_statement_tip_agree">I Agree</string>
    <string name="weather_privacy_statement_tip_disagress">I Disagree</string>
    <string name="weather_privacy_statement_tip_message">Network connection and device status are required for Weather to work; \n In addition, you need to turn on location services to allow Weather to determine your location. The location information used by the weather app is provided by a third-party location service provider. \n Not allowing access to the above information will result in us failing to automatically obtain your location and provide you with local weather information. You can manually add a city to get local weather information or search the city\'s weather. Also, you can manage app permissions at Mobile Management - App Management by selecting on or off. \n We will collect and use your information in accordance with Smartisan\'s Privacy Policy. Click I Agree to indicate that you agree with the above content, %1$s and %2$s.</string>
    <string name="weather_privacy_statement_tip_privacy_policy">Smartisan Privacy Policy</string>
    <string name="weather_privacy_statement_tip_user_agreement">End-User License Agreement</string>
    <string name="weather_request_location_permission_tips_cancel">Cancel</string>
    <string name="weather_request_location_permission_tips_message">Turn on location services to allow “Weather” to determine your location, click to go to settings</string>
    <string name="weather_request_location_permission_tips_setting">Go to settings</string>
    <string name="weather_request_location_permission_tips_title">Prompt</string>
    <string name="weather_search_city_default_locaiton">Location Service</string>
    <string name="weather_search_empty_info1">No search results</string>
    <string name="weather_search_empty_info2">Please enter search contents again</string>
    <string name="weather_search_no_connect_info">Cannot get data</string>
    <string name="weather_search_no_connect_info_tip">Please connect to the network and try again</string>
    <string name="weather_search_refresh">refresh</string>
    <string name="weather_sunrise_code">1000</string>
    <string name="weather_sunset_code">1001</string>
    <string name="weather_temperature_symbol">°</string>
    <string name="weather_text_00">Sunny</string>
    <string name="weather_text_01">Cloudy</string>
    <string name="weather_text_02">Cloudy</string>
    <string name="weather_text_03">Shower</string>
    <string name="weather_text_04">Thundershower</string>
    <string name="weather_text_05">Hail</string>
    <string name="weather_text_06">Sleet</string>
    <string name="weather_text_07">Light rain</string>
    <string name="weather_text_08">Moderate rain</string>
    <string name="weather_text_09">Heavy rain</string>
    <string name="weather_text_10">Rainstorm</string>
    <string name="weather_text_1000">Sunrise</string>
    <string name="weather_text_1001">Sunset</string>
    <string name="weather_text_11">Downpour</string>
    <string name="weather_text_12">Heavy downpour</string>
    <string name="weather_text_13">Snow shower</string>
    <string name="weather_text_14">Light snow</string>
    <string name="weather_text_15">Moderate snow</string>
    <string name="weather_text_16">Heavy snow</string>
    <string name="weather_text_17">Heavy snowfall</string>
    <string name="weather_text_18">Fog</string>
    <string name="weather_text_19">Freezing rain</string>
    <string name="weather_text_20">Sand storm</string>
    <string name="weather_text_21">Moderate rain</string>
    <string name="weather_text_22">Heavy rain</string>
    <string name="weather_text_23">Rainstorm</string>
    <string name="weather_text_24">Downpour</string>
    <string name="weather_text_25">Heavy downpour</string>
    <string name="weather_text_26">Moderate snow</string>
    <string name="weather_text_27">Heavy snow</string>
    <string name="weather_text_28">Heavy snowfall</string>
    <string name="weather_text_29">Floating dust</string>
    <string name="weather_text_30">Sand blowing</string>
    <string name="weather_text_31">Sandstorm</string>
    <string name="weather_text_32">Smog</string>
    <string name="weather_text_49">Strong fog</string>
    <string name="cancel">Cancel</string>
    <string name="search_bar_clear">Clear</string>
    <string name="search_bar_editor">Search box</string>
    <string name="search_bar_filter">Filter</string>
    <string name="weather_widget_refresh_content_description">Refresh weather</string>
    <string name="weather_widget_preview_city">Beijing</string>
    <string name="weather_widget_preview_update">Updated 10:24</string>
    <string name="weather_widget_preview_temperature">25°</string>
    <string name="weather_widget_preview_low_high">18° / 29°</string>
    <string name="weather_widget_preview_aqi">AQI 42 Excellent</string>
</resources>