<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SmallSp">

    <ImageView
        android:id="@android:id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/weather_widget_background_sunny" />

    <LinearLayout
        android:id="@+id/widget_weather_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/widget_city"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginRight="32dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:shadowColor="#26000000"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/weather_widget_preview_city"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/widget_update_time"
                android:layout_width="match_parent"
                android:layout_height="11dp"
                android:layout_below="@id/widget_city"
                android:layout_marginRight="28dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/weather_widget_preview_update"
                android:textColor="#B3FFFFFF"
                android:textSize="9sp" />

            <ImageView
                android:id="@+id/widget_refresh"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/weather_widget_action_background"
                android:contentDescription="@string/weather_widget_refresh_content_description"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/weather_widget_refresh" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/widget_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="44sp"
                    android:autoSizeMinTextSize="32sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:shadowColor="#26000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:text="@string/weather_widget_preview_temperature"
                    android:textColor="@android:color/white"
                    android:textSize="44sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/widget_weather_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="4dp"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/little_icon_sunny" />

                <TextView
                    android:id="@+id/widget_condition"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/weather_text_00"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/widget_high_low"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/weather_widget_preview_low_high"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/widget_aqi"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/weather_widget_preview_aqi"
                android:textColor="#B3FFFFFF"
                android:textSize="9sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
