<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_bar_height">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/search_bar_right_view_container"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/search_bar_margin_search_view"
        android:layout_marginRight="@dimen/bar_margin_edge"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
    <ImageView
        android:id="@+id/search_bar_right_view"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/search_bar_margin_each"
        android:layout_marginRight="@dimen/bar_margin_edge"
        android:src="@drawable/sorting_icon_selector"
        android:scaleType="centerInside"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/search_bar_filter"
        style="@style/StandardIconStyle"/>
    <ImageView
        android:id="@+id/search_bar_cancel_button"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/search_bar_margin_search_view"
        android:layout_marginRight="@dimen/bar_margin_edge"
        android:src="@drawable/standard_icon_cancel_selector"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/cancel"
        style="@style/StandardIconStyle"/>
    <RelativeLayout
        android:id="@+id/search_bar_edit_layout"
        android:background="@drawable/search_bar_edit_bg_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bar_margin_edge"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true">
        <TextView
            android:gravity="center"
            android:id="@+id/search_bar_left_icon"
            android:background="@drawable/search_bar_left_icon_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/bar_margin_edge"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:importantForAccessibility="no"/>
        <TextView
            android:gravity="center"
            android:id="@+id/search_bar_clear_text"
            android:background="@drawable/selector_small_icon_btn_text_clear"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/bar_margin_edge"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/search_bar_clear"/>
        <com.smartisan.weather.widget.SearchBarEditText
            android:textSize="@dimen/search_bar_input_editor_text_size"
            android:textColor="@color/editor_text_color"
            android:textColorHint="@color/editor_hint_text_color"
            android:gravity="center_vertical"
            android:id="@+id/search_bar_edit_text"
            android:background="@null"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:saveEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/bar_margin_edge"
            android:cursorVisible="false"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/search_bar_secondary_filter"
            android:layout_toRightOf="@+id/search_bar_left_icon"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:contentDescription="@string/search_bar_editor"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/search_bar_secondary_filter"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_gravity="left"
                android:id="@+id/search_bar_secondary_filter_divider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="11dp"
                android:src="@drawable/search_bar_secondary_filter_divider"/>
            <TextView
                android:textSize="13.5sp"
                android:textColor="@color/app_filter_text_color"
                android:id="@+id/search_bar_secondary_filter_btn"
                android:paddingRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_bar_filter"
                android:drawableRight="@drawable/search_bar_secondary_filter_btn"
                android:drawablePadding="7dp"
                android:layout_centerVertical="true"/>
        </LinearLayout>
    </RelativeLayout>
</merge>
